
1.2.1:
Sam Lantinga - Thu Feb 17 18:59:36 PST 2000
 * Only one menu entry for each combination of desktop and app is created.
Sam Lantinga - Mon Feb 14 13:06:46 PST 2000
 * Added -V command line option to print the version and build date
Troy A. Griffitts - Mon, 14 Feb 2000 12:24:32 -0700
 * Added support for the RedHat /etc/X11/applnk desktop directory
 * Added "menu" and "name" attributes to the binary element
Troy A. Griffitts - Fri, 11 Feb 2000 12:07:39 -0700
 * Added environment variable parsing to the parse_line() function
Troy A. Griffitts - Fri, 11 Feb 2000 12:07:39 -0700
 * Added "path" attribute to the files element
Bernd Kreimeier - 1999-12-10
 * detect.c (detect_diskspace): replaced Karl's libc detection code
   (which failed on glibc-2.0 on our testbox) with new one.

1.2:  Third public release
SOL -   Set the umask for the installer to: 022 
SOL -   Added "arch" and "libc" attributes to the option element
SOL -   Added SETUP_ARCH and SETUP_LIBC environment overrides

1.1:  Second public release
SOL -   Added license file support (eula="license.txt" option for install XML)
SOL -   Added support for <script> elements in options
SOL -	Added preinstall and postinstall script support
SOL -   Added web browser launch support (url="http://....")
SOL -   Added network check for URL, and (localurl="...")
SOL -   Added -c command line option to change working directory
SOL -   Added the "path" attribute to the install element
SOL -   The console ui now checks for write permissions on install path
SOL -   Added '?' help key for console install options
SOL -   Fixed crash with nameless options
SOL -   Wrote documentation for XML setup specification file

1.0:  First public release

Initial Key:
SOL - Sam Lantinga (hercules@lokigames.com)