@@ -1,5 +1,7 @@
 
 1.2.1:
+Stephane Peter - Thu Mar  2 17:04:06 PST 2000
+ * Added CDROM support and "cdrom" attribute to "files" and "binary" elements
 Sam Lantinga - Thu Feb 17 18:59:36 PST 2000
  * Only one menu entry for each combination of desktop and app is created.
 Sam Lantinga - Mon Feb 14 13:06:46 PST 2000
